--- a/style.css
+++ b/style.css
@@ -7,17 +7,52 @@ html,
 body {
   margin: 0;
   padding: 0;
+  font-size: 18px; /*Set Base font size to 18 pixel*/
+}
+
+:root {
+  --primary: hsl(160deg, 100%, 30%);
+  --secondary-light: hsl(45deg, 100%, 50%);
+  --secondary-dark:hsl(45deg, 100%, 40%);
+  --gray-very-dark:hsl(0deg, 0%, 10%);
+  --gray-dark:hsl(0deg, 0%, 30%);
+  --gray:hsl(0deg, 0%, 40%);
+  --gray-light:hsl(0deg, 0%, 60%);
+  --black:hsl(0deg, 0%, 0%);
+  --white:hsl(0deg, 0%, 100%);
 }
 
 /* Add styles here! */
+/* Mobile */
+
 .intro-chunk {
-  padding: 16px;
+  padding: 48px;
+  font-size: 1.25rem;
+  background-color: var(--white);
+}
+
+.title {
+  margin: 64px 0;
+  font-size: 2rem;
+}
+
+.intro-chunk p {
+  margin: 24px 0;
+}
+
+.intro-chunk p strong {
+  color: var(--primary);
+}
+
+main  {
+  background-color: var(--gray-light);
+  border-top: 8px solid var(--gray);
+  padding-top: 96px;
 }
 
 .card {
-  padding-top: 64px;
-  height: 81px;
-  background-color: bisque;
+  background-color: var(--white);
+  padding: 8px 0;
 }
 
 .card p {
@@ -25,10 +60,44 @@ body {
 }
 
 .indented-heading {
-  background-color: blueviolet;
-  width: 90%;
-  margin-bottom: -128px;
-  height: 96px;
-  margin-top: 24px;
-  padding: 16px;
+  margin: 0;
+  font-size: 1.25rem;
+  width: max-content;
+  padding: 24px 24px;
+  background-color: var(--secondary-light);
+  border-bottom: 8px solid var(--secondary-dark);
+}
+
+/* Tablet */
+@media screen and (min-width: 550px) {
+  main  {
+    padding-bottom: 64px;
+  }
+
+  .intro-chunk p {
+    width: 70%;
+    max-width: 400px;
+  }
+
+  .card {
+    border-bottom: 8px solid var(--gray);
+  }
+  
+  .card p {
+    display: block;
+    margin: 24px;
+  }
+}
+
+@media screen and (min-width: 800px) {
+  .max-width-wrapper {
+    width: 60%;
+    max-width: 640px;
+    margin: 0 auto;
+  }
+  
+  .indented-heading {
+    margin-left: -16px;
+    padding-left: 40px;
+  }
 }
