--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ html,
 body {
   margin: 0;
   padding: 0;
-  font-size: 18px; /*Set Base font size to 18 pixel*/
+  font-size: 1.125rem;
 }
 
 :root {
